--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="author" content="laralink" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
-  <meta name="chadi export" content="export clove best" />
-  <meta name="clove" content="chadi export the best" />
+  <meta name="chadi export" content="export briquettes best" />
+  <meta name="briquettes" content="chadi export the best" />
 
 
 
   <!-- Page Title -->
-  <title>CHADI  EXPORT - Special Export Clove Indonesia</title>
+  <title>CHADI  EXPORT - Special Export briquettes Indonesia</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.png" />
   <!-- Stylesheets -->
@@ -75,9 +75,9 @@
       <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
-            <h1 class="st-hero-title">Chadi Export <br />Clove Special Indonesia!</h1>
+            <h1 class="st-hero-title">Chadi Export <br />Briquettes Special Indonesia!</h1>
             <div class="st-hero-subtitle">
-              Providing the best quality clove and produced directly from our local farmer.
+              Providing the best quality briquettes and produced directly from our local country.
             </div>
             <div class="st-btn-group st-style1">
               <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-color1">Contact us on whatsapp</a>
@@ -85,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="st-hero-img"><img src="assets/img/cengkeh-hero.png" alt="demo"></div>
+        <div class="st-hero-img"><img src="assets/img/type/image1.jpg" alt="demo"></div>
       </div>
       <!-- <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
@@ -136,9 +136,9 @@
               <div class="st-iconbox-icon">
                 <i class="flaticon-career-1"></i>
               </div>
-              <h3 class="st-iconbox-title">Hygenic</h3>
+              <h3 class="st-iconbox-title">From</h3>
               <div class="st-iconbox-text">
-                hygienic clove.
+                briquettes Indonesia.
               </div>
             </div>
           </div>
@@ -161,17 +161,17 @@
           <div class="col-lg-6">
             <div class="st-section-heading st-style1">
               <h3>About Us</h3>
-              <h2>WELCOME TO GLOBAL CLOVE DISTRIBUTOR</h2>
+              <h2>WELCOME TO GLOBAL DISTRIBUTOR</h2>
             </div>
             <div class="st-about-text">
-              <p>We are a company engaged in the largest clove export sector in Indonesia. Clove is one of the commodities that grows rapidly in Indonesia, this is supported by the condition of the Indonesian region as a tropical rain country in the world. Indonesia has managed to export as much as US$ 1.03 billion in spices.</p>
+              <p>We are a good quality briquettes provider company in Indonesia. Indonesia is one of the countries with the largest tropical rains in the world. Therefore, the quality of wood and coconut to make high-quality briquettes has great potential in our country..</p>
               <!-- <ul class="tr-list">
-                <li>clove.</li>
-                <li>clove.</li>
-                <li>clove.</li>
-                <li>clove.</li>
+                <li>briquettes.</li>
+                <li>briquettes.</li>
+                <li>briquettes.</li>
+                <li>briquettes.</li>
               </ul> -->
-              <a href="./assets/catalog/Chadi Export Catalog.pdf" class="st-btn st-style1 st-size1 st-color2">Get Catalog</a>
+              <a href="#" class="st-btn st-style1 st-size1 st-color2">Get Catalog</a>
             </div>
           </div>
         </div>
@@ -230,42 +230,36 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>This is our cloves fortfolio of the highest quality</p>
+          <p>This is our briquettess fortfolio of the highest quality</p>
         </div>
       </div>
       <div class="st-project st-project-carousel owl-carousel st-style1 st-owl-controler1">
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/cengke4.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/type/image5.jpg">
           <div class="st-project-meta">
-            <h3>Clove</h3>
+            <h3>briquettes</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/type/cengkeh-hero.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/image1.jpg">
           <div class="st-project-meta">
-            <h3>Clove</h3>
+            <h3>briquettes</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/dry-clove1-min.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/type/image2.jpg">
           <div class="st-project-meta">
-            <h3>Clove</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/type/dry-clove2-min.png">
-          <div class="st-project-meta">
-            <h3>Clove</h3>
+            <h3>briquettes</h3>
             <span>Branding</span>
           </div>
         </a>
 
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/dry-clove3-min.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/image3.jpg">
           <div class="st-project-meta">
-            <h3>Clove</h3>
+            <h3>briquettes</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/dry-clove4-min.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/image4.jpg">
           <div class="st-project-meta">
             <h3>Project Title One</h3>
             <span>Branding</span>
@@ -299,7 +293,7 @@
           <div class="col-lg-7 offset-lg-1">
             <div class="st-cta text-center st-section">
               <h2 class="st-cta-title">Order us right now!</h2>
-              <div class="st-cta-text">so you can get the best quality clove from our country. We will provide the best quality that you will definitely like and enjoy from the quality of our products</div>
+              <div class="st-cta-text">so you can get the best quality briquettes from our country. We will provide the best quality that you will definitely like and enjoy from the quality of our products</div>
               <div class="st-cta-btn">
                 <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-size1 st-color1">Contact us on whatsapp !</a>
               </div>
@@ -309,7 +303,7 @@
             <div class="st-vertical-middle">
               <div class="st-vertical-middle-in st-flex">
                 <div class="st-cta-img wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
-                  <img src="assets/img/type/cengkeh-hero.png" alt="demo">
+                  <img src="assets/img/type/image1.jpg" alt="demo">
                 </div>
               </div>
             </div>
@@ -534,7 +528,7 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>Contact me for get clove what you want.</p>
+          <p>Contact me for get briquettes what you want.</p>
         </div>
       </div>
       <div class="container">
